test/files/errors/readFileIF.jg
_main int ()
{
    "./kdkjf" readFile;
    0 return;
}